--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -12,7 +12,7 @@ interface Props {
 
 const {
   as: As = "section",
-  frameColor = "0 0 42",
+  frameColor,
   headerForeground = "0 0 72",
   bodyForeground = "0 0 72",
   bodyBackground = "0 0 0",
