--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -19,7 +19,7 @@ import "@/styles/global.css"
     <main class="h-full p-[var(--fp)]">
       <div
         id="content"
-        class="relative h-full rounded-2xl overflow-x-hidden overflow-y-scroll space-y-[var(--fp)] snap-mandatory snap-y"
+        class="relative h-full rounded-2xl overflow-x-hidden space-y-[var(--fp)] snap-mandatory snap-y"
       >
         <slot />
       </div>
