--- a/src/svgs/Angular.svg.astro
+++ b/src/svgs/Angular.svg.astro
@@ -21,7 +21,7 @@ interface Props extends HTMLAttributes<"svg"> {}
       width="49"
       height="50"
     >
-      <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="white"></path>
+      <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="currentColor"></path>
     </mask>
     <g mask="url(#mask0_207_385)">
       <mask
@@ -33,15 +33,15 @@ interface Props extends HTMLAttributes<"svg"> {}
         width="49"
         height="50"
       >
-        <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="white"></path>
+        <path d="M0.867188 0H48.1328V50H0.867188V0Z" fill="currentColor"></path>
       </mask>
       <g mask="url(#mask1_207_385)">
         <path
           d="M47.9375 8.39844L46.1797 34.9609L29.9688 0L47.9375 8.39844ZM36.6094 42.7734L24.5 49.8047L12.1953 42.7734L14.5391 36.7188H34.2656L36.6094 42.7734ZM24.5 13.2812L30.75 28.9062H18.0547L24.5 13.2812ZM2.625 34.9609L0.867188 8.39844L18.8359 0L2.625 34.9609Z"
-          fill="white"></path>
+          fill="currentColor"></path>
         <path
           d="M47.9375 8.39844L46.1797 34.9609L29.9688 0L47.9375 8.39844ZM36.6094 42.7734L24.5 49.8047L12.1953 42.7734L14.5391 36.7188H34.2656L36.6094 42.7734ZM24.5 13.2812L30.75 28.9062H18.0547L24.5 13.2812ZM2.625 34.9609L0.867188 8.39844L18.8359 0L2.625 34.9609Z"
-          fill="white"></path>
+          fill="currentColor"></path>
       </g>
     </g>
   </g>
@@ -50,7 +50,7 @@ interface Props extends HTMLAttributes<"svg"> {}
       <rect
         width="47.2656"
         height="50"
-        fill="white"
+        fill="currentColor"
         transform="translate(0.867188)"></rect>
     </clipPath>
   </defs>
