--- a/src/svgs/Firebase.svg.astro
+++ b/src/svgs/Firebase.svg.astro
@@ -14,38 +14,38 @@ interface Props extends HTMLAttributes<"svg"> {}
   <g clip-path="url(#clip0_207_405)">
     <path
       d="M0.266357 40.3131L0.568779 39.8897L14.8713 12.751L14.9015 12.4637L8.59684 0.620777C8.06835 -0.371246 6.58117 -0.120391 6.40795 0.99015L0.266357 40.3131Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M0.444824 39.9902L0.673457 39.5442L14.8263 12.6898L8.53713 0.798769C8.01448 -0.182855 6.68713 0.0674302 6.51562 1.16629L0.444824 39.9902Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <g filter="url(#filter0_i_207_405)">
       <path
         d="M0.444824 39.9902L0.673457 39.5442L14.8263 12.6898L8.53713 0.798769C8.01448 -0.182855 6.68713 0.0674302 6.51562 1.16629L0.444824 39.9902Z"
-        fill="white"></path>
+        fill="currentColor"></path>
     </g>
     <path
       d="M19.4979 21.4217L24.1924 16.614L19.4965 7.6496C19.0508 6.80103 17.8062 6.79846 17.3652 7.6496L14.8562 12.4341V12.8415L19.4978 21.4217H19.4979Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M19.4141 21.2214L23.9781 16.5473L19.4141 7.85688C18.9808 7.03195 17.928 6.94548 17.4992 7.77283L14.9771 12.6317L14.9016 12.8801L19.4141 21.2214V21.2214Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <g filter="url(#filter1_i_207_405)">
       <path
         d="M19.4141 21.2214L23.9781 16.5473L19.4141 7.85688C18.9808 7.03195 17.928 6.94548 17.4992 7.77283L14.9771 12.6317L14.9016 12.8801L19.4141 21.2214V21.2214Z"
-        fill="white"></path>
+        fill="currentColor"></path>
     </g>
     <path
       d="M0.266357 40.3132L0.403394 40.1753L0.9014 39.973L19.203 21.7394L19.4349 21.1082L14.8693 12.4082L0.266357 40.3132Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M20.0842 49.5086L36.6476 40.2712L31.9176 11.1408C31.7696 10.2294 30.6515 9.86919 29.9991 10.5226L0.266357 40.3131L16.7347 49.5079C17.2466 49.7937 17.8231 49.9438 18.4094 49.9439C18.9956 49.9441 19.5722 49.7942 20.0842 49.5086Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M36.4992 40.1937L31.8052 11.2846C31.6585 10.3801 30.7285 10.0058 30.0811 10.6544L0.450195 40.2564L16.7378 49.3601C17.2458 49.6437 17.8179 49.7927 18.3997 49.7929C18.9815 49.793 19.5536 49.6443 20.0617 49.361L36.4993 40.1936L36.4992 40.1937Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M20.0841 49.2365C19.5721 49.5221 18.9956 49.6719 18.4094 49.6718C17.8232 49.6717 17.2467 49.5216 16.7348 49.2358L0.39908 40.1732L0.266602 40.3132L16.7348 49.5081C17.2467 49.7938 17.8232 49.9439 18.4095 49.9441C18.9957 49.9442 19.5723 49.7943 20.0843 49.5088L36.6477 40.2713L36.6071 40.0217L20.0843 49.2367L20.0841 49.2365Z"
-      fill="white"></path>
+      fill="currentColor"></path>
   </g>
   <defs>
     <filter
@@ -112,7 +112,7 @@ interface Props extends HTMLAttributes<"svg"> {}
       <rect
         width="36.4672"
         height="50"
-        fill="white"
+        fill="currentColor"
         transform="translate(0.266357)"></rect>
     </clipPath>
   </defs>
