--- a/src/svgs/Vercel.svg.astro
+++ b/src/svgs/Vercel.svg.astro
@@ -12,14 +12,14 @@ interface Props extends HTMLAttributes<"svg"> {}
   {...Astro.props}
 >
   <g clip-path="url(#clip0_207_416)">
-    <path d="M29.5 0L58.3288 49.9336H0.671143L29.5 0Z" fill="white"></path>
+    <path d="M29.5 0L58.3288 49.9336H0.671143L29.5 0Z" fill="currentColor"></path>
   </g>
   <defs>
     <clipPath id="clip0_207_416">
       <rect
         width="57.6577"
         height="50"
-        fill="white"
+        fill="currentColor"
         transform="translate(0.671143)"></rect>
     </clipPath>
   </defs>
