--- a/src/svgs/Supabase.svg.astro
+++ b/src/svgs/Supabase.svg.astro
@@ -14,17 +14,17 @@ interface Props extends HTMLAttributes<"svg"> {}
   <g clip-path="url(#clip0_207_401)">
     <path
       d="M28.5744 48.7983C27.3089 50.3916 24.7434 49.5186 24.7129 47.4841L24.2673 17.7271H44.2762C47.9001 17.7271 49.9213 21.9129 47.6678 24.7509L28.5744 48.7983Z"
-      fill="white"></path>
+      fill="currentColor"></path>
     <path
       d="M20.4367 0.916359C21.7022 -0.677004 24.2673 0.196005 24.2978 2.23052L24.4934 31.9876H4.73452C1.11062 31.9876 -0.911057 27.8018 1.34293 24.9633L20.4367 0.916359Z"
-      fill="white"></path>
+      fill="currentColor"></path>
   </g>
   <defs>
     <clipPath id="clip0_207_401">
       <rect
         width="48.2301"
         height="50"
-        fill="white"
+        fill="currentColor"
         transform="translate(0.38501)"></rect>
     </clipPath>
   </defs>
