--- a/src/components/TextAnim.astro
+++ b/src/components/TextAnim.astro
@@ -52,11 +52,12 @@ const {
     top: 0;
     left: 0;
   }
-  :global(.up-text-anim-trigger) [up-text-anim-active] {
+
+  /* :global(var(--trigger)) [up-text-anim-active] {
     animation: up 1s forwards;
     top: 2rem;
     transition: all 1s;
-  }
+  } */
 
   @keyframes up {
     to {
