--- a/src/components/NoiseEffect.astro
+++ b/src/components/NoiseEffect.astro
@@ -13,6 +13,7 @@
   const ctx = canvas.getContext("2d")!
 
   init()
+  reset()
 
   function createNoise() {
     const idata = ctx.createImageData(width, height)
@@ -21,7 +22,7 @@
 
     for (let i = 0; i < len; i++) {
       if (Math.random() < 0.5) {
-        buffer32[i] = 0xaaffffff
+        buffer32[i] = 0xbbffffff
       }
     }
 
