--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -11,6 +11,7 @@ import "@/styles/global.css"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
+    <meta name="theme-color" content="#000" />
     <title>Document</title>
   </head>
   <body class="font-sans text-foreground bg-background h-dvh">
