--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -14,7 +14,7 @@ import "@/styles/global.css"
     <meta name="theme-color" content="#000" />
     <title>Document</title>
   </head>
-  <body class="font-sans text-foreground bg-background h-dvh">
+  <body class="font-sans text-foreground bg-background h-dvh select-none">
     <PageFrame />
     <Header />
     <main class="h-full p-[var(--fp)]">
