--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Root from "@/layouts/Root.layout.astro"
+import Experience from "@/sections/Experience.section.astro"
 import Hero from "@/sections/Hero.section.astro"
 import Projects from "@/sections/Projects.section.astro"
 import TechSkills from "@/sections/TechSkills.section.astro"
@@ -9,4 +10,5 @@ import TechSkills from "@/sections/TechSkills.section.astro"
   <Hero />
   <Projects />
   <TechSkills />
+  <Experience />
 </Root>
