--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -58,7 +58,7 @@ import TextAnim from "@/components/TextAnim.astro"
     />
   </div> -->
 </Section>
-<StarsEffect class="h-full" />
+<StarsEffect />
 
 <style>
   #mesh {
