--- a/src/sections/TechSkills.section.astro
+++ b/src/sections/TechSkills.section.astro
@@ -151,7 +151,7 @@ const stack = [...backend, ...frontend, ...devops]
   <h1 class="font-black text-5xl md:text-8xl mt-20 mb-10 md:mb-0 md:mt-32">
     Tech<span class="text-stroke">Skills</span>
   </h1>
-  <div class="flex-1 overflow-hidden flex flex-col justify-center mb-20">
+  <div class="flex-1 overflow-hidden flex flex-col justify-center mb-20 max-w-screen-md mx-auto">
     <Tech items={stack} delay={30} translate={0} />
     <Tech items={stack} delay={70} translate={6} />
     <Tech items={stack} delay={50} translate={12} />
