--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,7 @@ import TextAnim from "./TextAnim.astro"
 ---
 
 <header
-  style="--foreground: var(--header-foreground)"
-  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 z-30 uppercase text-foreground"
+  class="fixed top-[--fp] left-[--fp] right-[--fp] p-4 z-30 uppercase text-foreground"
 >
   <div
     class="flex items-center xl:items-start justify-between text-xs font-mono"
