--- a/src/sections/ProjectsMobile.section.astro
+++ b/src/sections/ProjectsMobile.section.astro
@@ -5,22 +5,20 @@ import type { Project as ProyectInterface } from "@/interfaces/project.interface
 import projects from "@/data/projects.json"
 ---
 
-<Section frameThreshold={0} class="xl:hidden h-auto p-0">
+<Section class="xl:hidden h-auto p-0">
   <h2
     class="text-5xl xs:text-6xl sm:text-7xl font-black uppercase mt-16 text-right pr-4"
   >
     Projects
   </h2>
-  <div class="flex flex-col snap-mandatory snap-y">
+  <div class="flex flex-col">
     {
       projects.map((p) => (
-        <div class="h-full flex items-center justify-center">
-          <Project
-            project-item-color
-            class="snap-center pb-24 py-12"
-            {...(p as ProyectInterface)}
-          />
-        </div>
+        <Project
+          project-item-color
+          class="pb-24 py-12 h-[calc(100vh-var(--fp)*2)]"
+          {...(p as ProyectInterface)}
+        />
       ))
     }
   </div>
